--- a/about.html
+++ b/about.html
@@ -34,13 +34,16 @@
       <section class="about">
         <div class="about__bio-image">
           <div class="about__bio">
-            <h2 class="text-secondary">BIO</h2>
+            <h2 class="text-secondary">bio</h2>
             <p>
-              Possesses strong teamwork skills and technical knowledge in programming languages. Currently a Senior Software Engineer
-              with DSTA, handling a range of full-stack roles including frontend, backend and deployment.
-              <br>
-              Focused in the area of Deep Learning, Computer Vision, DevSecOps and web app development.
-              <br>
+              Possesses strong teamwork skills and technical knowledge in
+              programming languages. Currently a Senior Software Engineer with
+              DSTA, handling a range of full-stack roles including frontend,
+              backend and deployment.
+              <br />
+              Focused in the area of Deep Learning, Computer Vision, DevSecOps
+              and web app development.
+              <br />
               Always up for making new connections!
             </p>
           </div>
@@ -48,32 +51,41 @@
 
         <div class="jobs">
           <div class="jobs__job">
-          <h2 class="text-secondary">2018 - Current</h2>
-          <h3>DSTA</h3>
-          <h4>Senior Software Engineer</h4>
-        </div>
-        <div class="jobs__job">
-          <h2 class="text-secondary">Jan 2018 - May 2018</h2>
-          <h3>DSTA</h3>
-          <h4>Internship Attachment Student</h4>
-          <p>• Developed machine learning classifier (via using: Python Scikit-learn, XGBoost)
-          <br>• Created web service user interface (via using: Django Python, Celery, RabbitMQ)</p>
-        </div>
+            <h2 class="text-secondary">2018 - Current</h2>
+            <h3>DSTA</h3>
+            <h4>Senior Software Engineer</h4>
+          </div>
+          <div class="jobs__job">
+            <h2 class="text-secondary">Jan 2018 - May 2018</h2>
+            <h3>DSTA</h3>
+            <h4>Internship Attachment Student</h4>
+            <p>
+              • Developed machine learning classifier (via using: Python
+              Scikit-learn, XGBoost) <br />• Created web service user interface
+              (via using: Django Python, Celery, RabbitMQ)
+            </p>
+          </div>
           <div class="jobs__job">
             <h2 class="text-secondary">2014 - 2018</h2>
             <h3>Nanyang Technological University</h3>
             <h4>Bachelor of Engineering (Computer Science)</h4>
             <p>
               <i>NTU-CSEC Offensive Cyber Security Club</i>
-            <br>• Attended 4-Day Boot Camp 2016; acquired elementary level in Penetration Testing (e.g. Metasploit, NMAP, Buffer
-            Overflow Attack with Python Scripting) on different OS (e.g. Linux, Microsoft Windows, Android)
-            <br>• Attended weekly meetings for knowledge sharing
-            
-<i><br>Computer Science & Engineering Club – Academic Subcommittee</i>
-            <br>• Oversaw the smooth operation of Student-led Tutorial Groups by gathering weekly student survey; provided valuable
-            student feedback for conducting future classes
-            <br>• Set up online presence of the bi-annual Secondhand Book Sale by digitising the physical book stock; increased outreach
-            to audience
+              <br />• Attended 4-Day Boot Camp 2016; acquired elementary level
+              in Penetration Testing (e.g. Metasploit, NMAP, Buffer Overflow
+              Attack with Python Scripting) on different OS (e.g. Linux,
+              Microsoft Windows, Android) <br />• Attended weekly meetings for
+              knowledge sharing
+
+              <i
+                ><br />Computer Science & Engineering Club – Academic
+                Subcommittee</i
+              >
+              <br />• Oversaw the smooth operation of Student-led Tutorial
+              Groups by gathering weekly student survey; provided valuable
+              student feedback for conducting future classes <br />• Set up
+              online presence of the bi-annual Secondhand Book Sale by
+              digitising the physical book stock; increased outreach to audience
             </p>
           </div>
           <div class="jobs__job">
@@ -81,15 +93,20 @@
             <h3>Paybar Pte Ltd</h3>
             <h4>Software Engineer</h4>
             <p>
-              <br>• Developed single, unifying SQL automation script that migrated all database versions to the company’s latest database
-              version; saved significant time and labour on manual upgrade (via using: MySQL database, dbForge, phpMyAdmin, MySQL
-              Workbench)
-              <br>• Developed translation for application from English to Chinese and Thai languages; vastly improved app usability for
-              local and overseas clients (via using: i18n, JSON, AngularJS, Ionic framework)
-              <br>• Performed QA, testing and maintained bug-log on company Point-of-Sale (POS) application, which operated on multiple OS
-              (e.g. Microsoft Windows, Apple iOS)
-              <br>• Gained experience in setting up Microsoft IIS server, importing / exporting database, using Excel / Google Sheets /
-              OpenOffice Calc formulas, cloning / imaging desktops and providing remote desktop assistance
+              <br />• Developed single, unifying SQL automation script that
+              migrated all database versions to the company’s latest database
+              version; saved significant time and labour on manual upgrade (via
+              using: MySQL database, dbForge, phpMyAdmin, MySQL Workbench)
+              <br />• Developed translation for application from English to
+              Chinese and Thai languages; vastly improved app usability for
+              local and overseas clients (via using: i18n, JSON, AngularJS,
+              Ionic framework) <br />• Performed QA, testing and maintained
+              bug-log on company Point-of-Sale (POS) application, which operated
+              on multiple OS (e.g. Microsoft Windows, Apple iOS) <br />• Gained
+              experience in setting up Microsoft IIS server, importing /
+              exporting database, using Excel / Google Sheets / OpenOffice Calc
+              formulas, cloning / imaging desktops and providing remote desktop
+              assistance
             </p>
           </div>
         </div>
