--- a/contact.html
+++ b/contact.html
@@ -1,65 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
     <title>Michelle Teo - Contact</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="menu-btn">
-            <span class="menu-btn__burger"></span>
-        </div>
+      <div class="menu-btn">
+        <span class="menu-btn__burger"></span>
+      </div>
 
-        <nav class="nav">
-            <ul class="menu-nav">
-                <li class="menu-nav__item">
-                    <a href="index.html" class="menu-nav__link"> Home </a>
-                </li>
-                <li class="menu-nav__item">
-                    <a href="about.html" class="menu-nav__link"> About </a>
-                </li>
-                <li class="menu-nav__item">
-                    <a href="projects.html" class="menu-nav__link"> Projects </a>
-                </li>
-                <li class="menu-nav__item active">
-                    <a href="contact.html" class="menu-nav__link"> Contact </a>
-                </li>
-            </ul>
-        </nav>
+      <nav class="nav">
+        <ul class="menu-nav">
+          <li class="menu-nav__item">
+            <a href="index.html" class="menu-nav__link"> Home </a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="about.html" class="menu-nav__link"> About </a>
+          </li>
+          <li class="menu-nav__item">
+            <a href="projects.html" class="menu-nav__link"> Projects </a>
+          </li>
+          <li class="menu-nav__item active">
+            <a href="contact.html" class="menu-nav__link"> Contact </a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <section class="contact">
-            <h2>Get in Touch</h2>
+      <section class="contact">
+        <h2>Get in Touch</h2>
 
-            <div class="contact__list">
-                <div class="contact__email">
-                    <i class="fas fa-envelope"></i> Email
-                    <div class="text-secondary">c140137@e.ntu.edu.sg</div>
-                </div>
-                <div class="contact__address">
-                    <i class="fas fa-map-marker-alt"></i> Address
-                    <div class="text-secondary">Singapore</div>
-                </div>
-            </div>
-            <div class="social-icons">
-                <a href="https://www.linkedin.com/in/mshankr/">
-                    <i class="fab fa-linkedin fa-2x"></i>
-                </a>
-                <a href="https://github.com/mshankr">
-                    <i class="fab fa-github fa-2x"></i>
-                </a>
-            </div>
+        <div class="contact__list">
+          <div class="contact__email">
+            <i class="fas fa-envelope"></i> email
+            <div class="text-secondary">c140137@e.ntu.edu.sg</div>
+          </div>
+          <div class="contact__address">
+            <i class="fas fa-map-marker-alt"></i> address
+            <div class="text-secondary">Singapore</div>
+          </div>
+        </div>
+        <div class="social-icons">
+          <a href="https://www.linkedin.com/in/mshankr/">
+            <i class="fab fa-linkedin fa-2x"></i>
+          </a>
+          <a href="https://github.com/mshankr">
+            <i class="fab fa-github fa-2x"></i>
+          </a>
+        </div>
 
-            <footer>&copy; Copyright 2021</footer>
-        </section>
+        <footer>&copy; Copyright 2021</footer>
+      </section>
     </main>
-    <script src="https://kit.fontawesome.com/4061a4fa2d.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/4061a4fa2d.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/main.js"></script>
-</body>
-
+  </body>
 </html>
