--- a/about.html
+++ b/about.html
@@ -93,10 +93,10 @@
             <h3>Paybar Pte Ltd</h3>
             <h4>Software Engineer</h4>
             <p>
-              <br />• Developed single, unifying SQL automation script that
-              migrated all database versions to the company’s latest database
-              version; saved significant time and labour on manual upgrade (via
-              using: MySQL database, dbForge, phpMyAdmin, MySQL Workbench)
+              • Developed single, unifying SQL automation script that migrated
+              all database versions to the company’s latest database version;
+              saved significant time and labour on manual upgrade (via using:
+              MySQL database, dbForge, phpMyAdmin, MySQL Workbench)
               <br />• Developed translation for application from English to
               Chinese and Thai languages; vastly improved app usability for
               local and overseas clients (via using: i18n, JSON, AngularJS,
