--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
     <main>
       <section class="contact">
-        <h2>Get in Touch</h2>
+        <h2>get in touch.</h2>
 
         <div class="contact__list">
           <div class="contact__email">
