--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
 
     <main>
       <section class="home">
-        <h2>Hi! I'm</h2>
         <h1 class="home__name">
           <span class="home__name--last">Michelle Teo</span>
         </h1>
-        <h2>Web Developer, DevSecOps & Programmer</h2>
+        <p>✓ Full-stack ✓ Frontend ✓ Backend ✓ Deployment</p>
+
+<p>✓ Deep Learning ✓ Computer Vision ✓ DevSecOps ✓ Web Dev</hp>
         
 
 <div class="social-icons">
