--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
     <main>
       <section class="projects">
         <div class="projects__bio-image">
-            <h1 class="text-secondary">My Projects</h1>
+            <h1 class="text-secondary">projects</h1>
             
           </div>
         </div>
