--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
       <section class="home">
         <h1 class="home__name">
-          <span class="home__name--last">Michelle Teo</span>
+          Michelle Teo
         </h1>
         <p>✓ Full-stack ✓ Frontend ✓ Backend ✓ Deployment</p>
 
