update responsive styling

--- a/projects.html
+++ b/projects.html
@@ -93,7 +93,7 @@
           </a>
         </div>
 
-        <footer>&copy; Copyright 2021</footer>
+        <!-- <footer>&copy; Copyright 2021</footer> -->
       </section>
     </main>
     <script
