--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
           </a>
         </div>
 
-        <footer>&copy; Copyright 2021</footer>
+        <!-- <footer>&copy; Copyright 2021</footer> -->
       </section>
     </main>
     <script
