--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
           </a>
         </div>
 
-        <footer>&copy; Copyright 2021</footer>
+        <!-- <footer>&copy; Copyright 2021</footer> -->
       </section>
     </main>
     <script
