--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </a>
 </div>
 
-        <footer>&copy; Copyright 2021</footer>
+        <!-- <footer>&copy; Copyright 2021</footer> -->
       </section>
     </main>
     <script
